--- a/index.html
+++ b/index.html
@@ -78,13 +78,19 @@
             <i class="fas fa-redo"></i>
           </button>
             </div>
+            <div class="recorder__controls--save">
+                <p class="recorder__controls--text text__save">SAVE AUDIO</p>
+                <button class="recorder__controls--save--btn btn" id="saveButton">
+          <i class="fas fa-save"></i>
+        </button>
+            </div>
 
         </div>
         <div class="row recorder__player" id="recordingsList">
 
         </div>
         <div class="row recorder__save" id="saveAudio">
-            
+
         </div>
     </div>
 
