recorder ui changes

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h4>Then paste below</h4>
 
             <p id="audioURL" class="row"></p>
-            <button id="copyButton" class="row" onclick="copyURL()">Copy URL</button>
+            <button id="copyButton" class="row" onclick="copyURL()">Copy Audio Link</button>
             <img src="red-arrow-down.png" width="50px" alt="red arrow pointing down" class="download__arrow" />
     </div>
 
